<resources>
    <string name="app_name">智联驾考</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="jkButton1">科目1</string>
    <string name="jkButton2">科目2</string>
    <string name="jkButton3">科目3</string>
    <string name="jkButton4">科目4</string>
    <string name="jkButton5">拿本</string>
    <string name="title_activity_jk1">智联驾考->科目1</string>
    <string name="title_activity_login">智联驾考->登录</string>
    <string name="loginButton">登录</string>
    <string name="regButton">注册</string>
</resources>
