<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/jkb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jkButton1">

        </Button>
        <Button
            android:id="@+id/jkb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jkButton2"/>
        <Button
            android:id="@+id/jkb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jkButton3"/>
        <Button
            android:id="@+id/jkb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jkButton4"/>

        <Button
            android:id="@+id/jkb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jkButton5"/>
    </LinearLayout>


</RelativeLayout>
